--- a/yoloxyz/multitasks/requirements.txt
+++ b/yoloxyz/multitasks/requirements.txt
@@ -4,7 +4,7 @@
 matplotlib>=3.2.2
 numpy>=1.18.5
 opencv-python>=4.1.2
-Pillow
+Pillow==9.5.0
 PyYAML>=5.3.1
 scipy>=1.4.1
 torch==2.2.0
@@ -23,9 +23,15 @@ pandas
 # coremltools>=4.1
 # onnx>=1.8.1
 # scikit-learn==0.19.2  # for coreml quantization
-onnxruntime==1.12.0
+#onnxruntime==1.12.0
 
 # extras --------------------------------------
 thop  # FLOPS computation
 pycocotools>=2.0  # COCO mAP
 requests
+
+# YoloV7
+bbyolov7
+
+# YoloV9
+bbyolov9
