chore: refactor yolov9-ptln

--- a/yoloxyz/multitasks/requirements.txt
+++ b/yoloxyz/multitasks/requirements.txt
@@ -7,14 +7,15 @@ opencv-python>=4.1.2
 Pillow==9.5.0
 PyYAML>=5.3.1
 scipy>=1.4.1
-torch==2.2.0
-torchvision==0.17.0
+# torch==2.2.0
+# torchvision==0.17.0
 tqdm>=4.41.0
 ipython
 psutil
 
 # logging -------------------------------------
 tensorboard>=2.4.1
+lightning
 # wandb
 
 # plotting ------------------------------------
